Bug 153091 - Pasting from nedit (on Linux) not working.
Summary: Pasting from nedit (on Linux) not working.
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.3.7.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.4.6 target:7.6.0 target:7.5.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Paste
  Show dependency treegraph
 
Reported: 2023-01-18 12:53 UTC by Balbir Sanghera
Modified: 2023-01-24 10:36 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Balbir Sanghera 2023-01-18 12:53:55 UTC
Description:
Cannot paste from nedit, using either middle mouse button on control or using Ctrl+V.

Ctrl+V gives "Requested clipoard format is not available"

Works in 7.2.0.4 ok.

Steps to Reproduce:
1. Start Libreoffice, start new writer Document.
2. Start nedit (5.7)
3. Enter text into nedit
4. Highlight text in nedit and middle click writer document. (middle mouse button paste)
5. Highlight text in nedit, press Ctrl+C. Put cursor in writer document.  Press Ctrl+V

Actual Results:
In Step 4, nothing happens, text not pasted.
In Step 5, a message dialog pops up. Message = "Requested clipoard format is not available"

I can do the same in other application and only other one to fail is geany.

Expected Results:
Step 4 should paste in the hilighted text.
Step 5 should paste in text that was copied with Ctrl+C


Reproducible: Always


User Profile Reset: Yes

Additional Info:
OS:Fedora 36
6.0.18-200.fc36.x86_64

Pasting to nedit using both methods from Libreoffice to nedit works.  Only nedit to Libreoffice fails.
Comment 1 Balbir Sanghera 2023-01-18 12:55:02 UTC
Also fails with Version: 7.3.7.2
Comment 2 Balbir Sanghera 2023-01-18 12:56:17 UTC
Version info from Help -> About

Version: 7.2.0.4 / LibreOffice Community
Build ID: 9a9c6381e3f7a62afc1329bd359cc48accb6435b
CPU threads: 8; OS: Linux 6.0; UI render: default; VCL: gtk3
Locale: en-GB (en_GB.utf8); UI: en-GB
Calc: threaded


Version: 7.3.7.2 / LibreOffice Community
Build ID: e114eadc50a9ff8d8c8a0567d6da8f454beeb84f
CPU threads: 8; OS: Linux 6.0; UI render: default; VCL: gtk3
Locale: en-GB (en_GB.utf8); UI: en-GB
Calc: threaded


Version: 7.4.4.2 / LibreOffice Community
Build ID: 85569322deea74ec9134968a29af2df5663baa21
CPU threads: 8; OS: Linux 6.0; UI render: default; VCL: gtk3
Locale: en-GB (en_GB.utf8); UI: en-US
Calc: threaded
Comment 3 stragu 2023-01-18 14:30:51 UTC
Reproduced for:

Version: 7.5.0.1 (X86_64) / LibreOffice Community
Build ID: 77cd3d7ad4445740a0c6cf977992dafd8ebad8df
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Pasting from Nedit to Firefox or Gedit works well.

Also reproduced in:

Version: 7.3.7.2 / LibreOffice Community
Build ID: e114eadc50a9ff8d8c8a0567d6da8f454beeb84f
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

But not in:

Version: 7.2.7.2 / LibreOffice Community
Build ID: 8d71d29d553c0f7dcbfa38fbfda25ee34cce99a2
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Using Nedit 5.7-2 from Ubuntu 20.04 sources.
Comment 4 stragu 2023-01-18 15:05:45 UTC
Bibisected with linux-64-7.3 repo to first offending commit 130b1dd1231fbad67429dd531f7234e7982c20cf which points to core commit:

commit c83a9ef419ac9bde61d0ebafa3692c8e43374d49
author	Caolán McNamara <caolanm@redhat.com>	Thu Jun 24 09:10:19 2021 +0100
committer	Caolán McNamara <caolanm@redhat.com>	Thu Jun 24 21:41:03 2021 +0200
tree a14de516b2b5275c9cf46dc910ecf1320bacec13
parent dcecb57d94fa1d4dc0b9f2449974936a40e6ba7d
drop text_transfer_result and merge dnd and paste logic
Change-Id: Ia91e961d2d94bbd4baeb81647438a4026a4fce60
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/117764

Caolán, can you please have a look?
Comment 5 Caolán McNamara 2023-01-19 15:46:23 UTC
nedit, a motif using thing, maybe we dropped some old transfer format without noticing there
Comment 6 Caolán McNamara 2023-01-19 16:32:10 UTC
https://gerrit.libreoffice.org/c/core/+/145824 will make it work again
Comment 7 Balbir Sanghera 2023-01-19 17:01:33 UTC
"nedit, a motif using thing", really!! :)

It's one of the best plain gui editors (don't say it near the emacs people).  Discovered it about 25 years ago, still using it.  Great for fixing up data, before pasting into where it's needed. Rectangler  selection, cuts and moves.

Cheers for the fast response.
Comment 8 Commit Notification 2023-01-19 19:39:36 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/68b28057a00a152dc23d3363dd413556882e2bfd

Resolves: tdf#153091 support text/plain without encoding from nedit

It will be available in 7.4.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2023-01-19 19:40:39 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6ef1b38885b748d8d48e0628acdf4491f4d8803f

Resolves: tdf#153091 support text/plain without encoding from nedit

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Caolán McNamara 2023-01-19 19:42:35 UTC
done in trunk, backports to 7-5 and 7-4 in gerrit
Comment 11 Commit Notification 2023-01-20 03:21:30 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/e49307d408fc95c280da729c6fdfc95d774c8837

Resolves: tdf#153091 support text/plain without encoding from nedit

It will be available in 7.5.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 stragu 2023-01-22 17:11:20 UTC
Verified fix in:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ff496c663904d97567f1876b2d9b758131f71be8
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thank you Balbir and Caolán!
Comment 13 Xisco Faulí 2023-01-24 10:36:13 UTC
7.4.5 was a hotfix release, updating target in status-whiteboard