Resolves: tdf#153091 support text/plain without encoding from nedit

Change-Id: I56dfc6dfec21b8c57b6f402c53b0229a2a2e7778
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145824
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>